--- a/.github/workflows/python-package2.yml
+++ b/.github/workflows/python-package2.yml
@@ -1,32 +1,24 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: 최신 뉴스 모음
-
-# 어떤 조건일때, 시점으로 시행시킬지 정의
-# 특정시간이 될때마다 실행
-
-
+# on -> 어떤 조건으로, 시점으로 실행시킬지 정의
 on:
-  # cron표현식 사용
-  # 참조사이트 : https://crontab.guru/
-  # - cron : "0 9 * * *"
-  
+  # 특정 시간이 될 때 마다 실행
+  # -> cron 표현식 사용 (참조 사이트 : https://crontab.guru/)
+  # - cron : "28 9 * * *"
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
-    # 서버실행 공간 - 깃허브 우분투를 환경 사용
+    # build -> 서버 실행 공간 - 깃허브 우분트 환경 사용
     runs-on: ubuntu-latest
-
-    # 파일저장 권한 부여
+    # permissions - 권한설정
+    # contents : write => 파일 저장 권한부여
     permissions:
       contents : write
-    
-    # steps별 실행단계
+    # steps -> step(진행 단계)별 실행단계
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -37,34 +29,27 @@ jobs:
       run: |
         # 파이썬 프로그램 업그레이드 실행
         python -m pip install --upgrade pip
-
     # 필요한 파일 설치
-    - name : libary install
-      run : |
+    - name: library install
+      run: |
         pip install requests
         pip install beautifulsoup4
-        prp install pandas
+        pip install pandas
         pip install lxml
-
-    # 내가 만든 파이썬 파일 실행
-    - name : run my file
-    - run : |
+    #  내가 만든 파이썬 파일 실행
+    - name: run my file
+      run: |
         python3 news.py
-
     # 커밋
-    - name : commits
-    - run : |
+    - name: commits
+      run: |
         git config --global user.email "sarah3832@naver.com"
         git config --global user.name "chang"
-        # csv,txt파일 추가
+        # csv,txt 파일 추가
         git add news.txt
-        git commit -m "최신뉴스 모음"
-
-    # push 작업실행
-    - name : push
-      uses : ad-m/github-push-action@master
-      with : 
-        branch : "main"
-
-        
-
+        git commit -m "최신 뉴스 모음"
+    # push 작업 실행
+    - name: push
+      uses: ad-m/github-push-action@master
+      with:
+        branch: "main"
